# grb_shader

./: .gitattributes  .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py
examples/: demo.md
grb_shader/: __init__.py  _version.py  catalog.py  catalog_selector.py  grb_analysis.py  grb_pop.py  multiverse.py  restored_simulation.py  samplers.py  selections.py  simulation.py
grb_shader/config/: matplotlibrc
grb_shader/data/: example_params.yml  ghirlanda2016.yml  ghirlanda2016_a_pulse.yml  ghirlanda2016_a_triangle.yml  ghirlanda2016_b_triangle.yml  ghirlanda2016_c_constant.yml  ghirlanda2016_c_t90fit.yml  ghirlanda2016_c_t90fit_pulse.yml  ghirlanda2016_c_t90fit_pulse_inc.yml  ghirlanda2016_c_t90fit_pulse_trunc.yml  ghirlanda2016_c_t90fit_r0_inc.yml  ghirlanda2016_c_triangle.yml  grb_short_gbm.csv  grb_short_konus.csv  lv_catalog.txt  lv_catalog_sfr.csv
grb_shader/plotting/: minor_symlog_locator.py  plotting_functions.py
grb_shader/profiles/: Ep_profiles.py  base_profile.py  temporal_profiles.py
grb_shader/test/: test_log.py
grb_shader/utils/: logging.py  package_data.py
scripts/: analyze_nondetected_grbs.md  catalogselection.md  demo.md  fit_detected_GRBs.md  fit_select_grbs.md  play_god.py  play_god_coinc.py  play_god_parallel.py  sgrbs_distributions.md  sgrbs_distributions_compact.md  sgrbs_survey.md  spatial_coincidences.md
scripts/fit_t90/: fit_model_mixed3_parallel.md  t90_data.txt
scripts/fit_t90/stan/: model_mixture.stan  model_mixture2.stan  model_mixture3.stan  model_mixture3_parallel.stan
