[aliases]
test=pytest

[metadata]
name = grb_shader
description = A tool for testing if GRBs intecept galaxies
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/grburgess/grb_shader
author_email = jmichaelburgess@gmail.com
author = J. Michael Burgess
requires_python = >=2.7.0


project_urls =
    Bug Tracker = https://github.com/grburgess/grb_shader/issues
    Source Code = https://github.com/grburgess/grb_shader


[options]
packages = find:
install_requires =
    astropy
    numpy	
    numba
    matplotlib
    gbmgeometry
    gbm_drm_gen
    popsynth
    cosmogrb
    configya
    joblib
    jupytext
    ligo.skymap
    ipympl


tests_require =
    pytest
    pytest-codecov

# [options.entry_points]
# console_scripts =
#    get_grb_analysis = grb_shader.scripts.analysis:get_grb_analysis
#    build_catalog = grb_shader.scripts.run_luigi:build_database_data

[versioneer]
VCS=git
style=pep440
versionfile_source=grb_shader/_version.py
versionfile_build=grb_shader/_version.py
tag_prefix=v
parentdir_prefix=grb_shader-
